[project]
name = "graph-filter-service"
version = "0.1.0"
description = "Advanced Neo4j graph filtering microservice"
authors = [
    {name = "Sarobidy Sitraka", email = "sarobidysitraka01@duck.com"}
]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "neo4j>=5.25.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.0",
    "hatchling>=1.27.0",
    "black>=24.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
    "ruff>=0.6.0",
    "black>=24.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.2",
]
